--- a/style/style.css
+++ b/style/style.css
@@ -12,9 +12,7 @@
 nav {
     position: absolute;
     top: 4vh; 
-    height: 100px;
 }
-
 
 ul > li {
     display: inline;
@@ -23,31 +21,62 @@ ul > li {
 }
 
 li > a {
+    font-family: 'Noto Sans', sans-serif;
     color: #FFFF;
     font-size: 1.1em;
     text-decoration: none;
     text-transform: uppercase;
 }
 
-/* */
+a:hover {
+    text-decoration: underline;
+    font-weight: bold;
+    color: #91BBF2;
+}
+
+
 .inicio {
     background-image: linear-gradient(45deg, #91BBF2, #1B52Bf);
     height: 90vh;
- 
-    
 }
-.titulo {
+
+.titulo-pr {
     position: absolute;
     text-align: center;
-    text-align: justify;
-    top: 50vh;
-    padding-left: 10vw; 
     font-family: 'Noto Sans', sans-serif;
     font-size: 2.5vw;
     font-weight: bold;
-    
+    color: #FFFF;
+    top: 50vh;
+    padding-left: 10vw
+}
+.titulo-um {
+    position: absolute;
+    text-align: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 2vw;
+    color: #FFFF;
+    top: 45vh;
+    padding-left: 10vw; 
+
+}
+.titulo-dois {
+    position: absolute;
+    text-align: center;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 2vw;
+    color: #FFFF;
+    top: 55vh;
+    padding-left: 10vw; 
 }
 
+.foto {
+    position: absolute;
+    top: 45vh;
+    width: 10vw;
+    right: 5vw;
+    padding-right: 8vw; 
+}
 
 
 .sobre-min {
@@ -55,6 +84,7 @@ li > a {
     height: 100vh;
     text-align: center;
 }
+
 
 .projetos{
     background:#91BBF2;
@@ -68,9 +98,19 @@ li > a {
     height: 90vh;
 }
 
+
+
+
 .footer {
     height: 10vh;
     background: #3B74BF;
+}
+.footer > p {
+    font-family: 'Noto Sans', sans-serif;
+    color: #FFFF;
+    font-size: 1vw;
+    padding-left: 10vw; 
+    padding-top: 1vh; 
 }
 
 
