--- a/style/style.css
+++ b/style/style.css
@@ -75,6 +75,11 @@ a:hover {
     top: 55vh;
     padding-left: 10vw; 
 }
+.animacao {
+    
+}
+
+
 .foto {
     position: absolute;
     top: 45vh;
