--- a/style/style.css
+++ b/style/style.css
@@ -2,42 +2,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 
-@keyframes animacao-cursor{
-
-    from {
-        border-right-color: rgba(255, 255, 255, 0.75);
-    }
-    to {
-        border-right-color: transparent;
-    }
-
-}
-@keyframes animacao-principal-txt {
-    
-    from {
-        width: 0;
-    }
-    to {
-        width: 11.3em;
-    }
-}
-@keyframes animacao-1{
-    
-    from {width:0;
-    }
-    to {width: 11.5em;
-    }
-
-}
-@keyframes animacao-2{
-    
-    from {width:0;
-    }
-    to {width:13em;
-    }
-
-}
-
 
 /*Seção zero // CABEÇALHO*/
 .header {
@@ -76,164 +40,7 @@ a:hover {
     padding-right: 12vw; 
 }
 
-
-/*Sessão Um // INICIO */
-.inicio {
-    background-image: linear-gradient(45deg, #91BBF2, #1B52Bf);
-    height: 90vh;
-}
-.titulo-principal {
-    position: absolute;
-    text-align: center;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 3em;
-    border-right: 2px solid rgba(255, 255, 255, 0.75);
-    color: #1B52Bf;
-    top: 51vh;
-    margin-left: 14vw;
-    white-space: nowrap;
-    overflow: hidden;
-}
-.animacao-principal {
-    animation: animacao-cursor steps(40) 1s infinite normal, animacao-principal-txt 4s 300ms normal both;
-}
-
-.titulo-um {
-    position: absolute;
-    text-align: center;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 2.2em;
-    color: #FFFF;
-    top: 45vh;
-    margin-left: 14vw; 
-}
-#animacao-1 {
-    position: absolute;
-    text-align: center; 
-    padding: 0px;
-    margin-left: 14vw;
-    top: 49vh;
-    width: 11.5em;
-    height: 2px;
-    background-color: #FFFF;
-    animation-name: animacao-1;
-    animation-duration: 4s;
-}
-
-.titulo-dois {
-    position: absolute;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 2.2em;
-    color: #FFFF;
-    top: 58vh;
-    margin-left: 14vw; 
-}
-#animacao-2 {
-    position: absolute;
-    text-align: center; 
-    padding: 0px;
-    margin-left: 14vw;
-    top: 62vh;
-    width: 13em;
-    height: 2px;
-    background-color: #FFFF;
-    animation-name: animacao-2;
-    animation-duration: 4s;
-}
-
-.button{
-    position: absolute;
-    background-color: #1B52Bf;
-    color: #FFFF;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 2em;
-    font-weight: lighter;
-    text-align: center;
-    padding: 15px 0;
-    top: 70vh;
-    width: 20%;
-    margin-left: 16vw; 
-    border-radius: 50px;
-    transition: 1s;
-}
-.button:hover {
-    text-decoration: none;
-    font-size: 2em;
-    font-weight: lighter;
-    transform: scale(1.1);
-}
-
-
-.foto {
-    position: absolute;
-    top: 45vh;
-    width: 10vw;
-    right: 5vw;
-    padding-right: 8vw; 
-}
-
-
-/*Titulos*/
-.titulo-de-secao {
-    text-align: center;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 2.3em;
-    color: #FFFF;
-    padding-top: 50px;
-}
-.titulo-sobre-mim {
-    display: flex;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 2.3em;
-    color: #FFFF;
-    padding-top: 50px;
-}
-
-
-/*Seção sobre Mim*/
-.sobre-mim {
-    background: #1B52Bf;
-    height: 100vh;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-}
-.paragrafo-sobre-mim {
-    justify-content: center;
-    align-items: center;
-    text-align: justify;
-    align-items: center;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 1.5em;
-    line-height: 1.5em;
-    color: #FFFF;
-    margin-right: 8vw;
-}
-
-.right-sobre-mim {
-    width: 40vw;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-}
-.left-sobre-mim {
-    width: 40vw;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-}
-.animacao {
-    display: flex;
-    width: 400px;
-}
-
-
-.projetos{
-    background:  #1b52bfa9;;
-    height: 100vh;
-}
-
+/*Seção quatro // RODAPÉ*/
 .footer {
     color: #1B52Bf;
     background: #91BBF2;
