--- a/style/sobre-mim.css
+++ b/style/sobre-mim.css
@@ -8,8 +8,8 @@
 }
 .titulo-sobre-mim {
     display: flex;
-    font-family: 'Noto Sans', sans-serif;
-    font-size: 2.3em;
+    font-family: 'Minecrafter', sans-serif;
+    font-size: 3em;
     color: #FFFF;
     padding-top: 50px;
 }
