--- a/style/inicio.css
+++ b/style/inicio.css
@@ -82,8 +82,8 @@
 }
 .foto {
     position: absolute;
-    top: 45vh;
-    width: 10vw;
+    top: 40vh;
+    width: 230px;
     right: 5vw;
     padding-right: 8vw; 
 }
