Update animação float

--- a/style/inicio.css
+++ b/style/inicio.css
@@ -87,6 +87,22 @@
     right: 5vw;
     padding-right: 8vw; 
 }
+.float {
+    transform: translateY(0px);
+    animation: float 5s ease-in-out infinite;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-30px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
+}
 
 @keyframes animacao-cursor{
     from {
