--- a/style/inicio.css
+++ b/style/inicio.css
@@ -76,6 +76,7 @@
 }
 .button:hover {
     text-decoration: none;
+    color: #FFFF;
     font-size: 2em;
     font-weight: lighter;
     transform: scale(1.1);
