--- a/style/inicio.css
+++ b/style/inicio.css
@@ -72,6 +72,7 @@
     width: 20%;
     margin-left: 16vw; 
     border-radius: 50px;
+    box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.226);
     transition: 1s;
 }
 .button:hover {
